--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Chinmay Sahu, PhD Candidate"
-  avatar           : "chinmaysahu_photo."
+  avatar           : "chinmaysahu_photo.PNG"
   bio              : "Doctoral Candidate at CoSiNe Lab"
   location         : "Potsdam, NY"
   employer         :
