--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/FinnCV.pdf
+    url: /files/ChinmaySahuCV.pdf
     
   - title: "Publications"
     url: /publications/
