--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   location         : "Potsdam, NY"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=cIViJoUAAAAJ&hl=en"
-  email            : "sahuc.clarkson@edu"
+  email            : "https://sahuc.clarkson@edu"
   uri              :
   bitbucket        :
   codepen          :
