--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "chinmaysahu"
+  linkedin         : chinmaysahu/
   orcid            : 
   pinterest        :
   soundcloud       :
